2009-10-27  Peter Bloomfield

	* src/toolbar-factory.c: show text for "compose" instead of
	"trash/delete".

2009-10-24  Peter Bloomfield

	* src/toolbar-factory.h: new member button_data::is_important.
	* src/toolbar-factory.c (tm_set_tool_item_label): use it.

2009-10-24  Peter Bloomfield

	* src/balsa-app.h: do not include toolbar-factory.h.

2009-10-15  Peter Bloomfield

	GSEAL cleanup

	* configure.in: enable GSEAL if gtk version >= 2.18.
	* libbalsa/address-view.c (lbav_entry_changed_cb):
	* libbalsa/address.c (addrlist_drag_received_cb):
	* libbalsa/html.c (lbh_size_request_cb):
	* libbalsa/identity.c (libbalsa_identity_select_dialog),
	(md_sig_path_changed_cb), (ident_dialog_get_path),
	(libbalsa_identity_config_dialog):
	* libbalsa/libbalsa.c (ask_cert_real):
	* libbalsa/misc.c (lb_create_size_group_func):
	* libbalsa/rfc3156.c (select_key_from_list), (get_passphrase_real):
	* libbalsa/send.c (ensure_send_progress_dialog):
	* libbalsa/smtp-server.c (libbalsa_smtp_server_dialog):
	* libbalsa/source-viewer.c (lsv_size_allocate_cb),
	(libbalsa_show_message_source):
	* libinit_balsa/assistant_helper.c (entry_changed_cb):
	* src/ab-main.c (edit_new_entry_cb), (addrlist_drag_get_cb):
	* src/ab-window.c (balsa_ab_window_init):
	* src/address-book-config.c (create_generic_dialog),
	(create_externq_dialog), (create_ldap_dialog), (create_gpe_dialog):
	* src/balsa-app.c (ask_password_real):
	* src/balsa-index.c (bndx_drag_cb), (bndx_mailbox_changed_cb),
	(bndx_popup_position_func), (bndx_expand_to_row),
	(balsa_index_pipe), (balsa_index_ensure_visible):
	* src/balsa-mblist.c (bmbl_drag_cb), (bmbl_mru_show_tree):
	* src/balsa-message.c (bm_on_set_style), (bm_find_scroll_to_iter),
	(bm_find_pass_to_entry), (gtk_tree_hide_func), (select_part),
	(scroll_set), (balsa_get_parent_window),
	(balsa_message_grab_focus):
	* src/balsa-mime-widget-callbacks.c (scroll_change),
	(balsa_mime_widget_key_press_event):
	* src/balsa-mime-widget-image.c (balsa_mime_widget_new_image),